# Solana-Crowdfunding-Platform

./: Anchor.toml  Cargo.toml  README.md  crowdfunding.json  package-lock.json  package.json  run_checklist.js  rust-toolchain.toml
programs/crowdfunding/: Cargo.toml
programs/crowdfunding/src/: lib.rs
tests/: crowdfunding.js  crowdfunding.json
