[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
constant_time_eq = { git = "https://github.com/cesarb/constant_time_eq", rev = "bea93a336b65dee32f1ed871ea1eecdf47977bb2" }
