[package]
name = "crowdfunding"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "crowdfunding"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
# Pinning these to avoid transitive Edition 2024 dependencies
blake3 = "=1.5.0"
constant_time_eq = "=0.3.0"
borsh = "0.10.3"
solana-program = "=1.16.25"
